tests/failing/1-root_level_invocation/main.rgo
exit: @exit

exit(0)
